2.5.86 (2025-08-04)

- Optimized CPU and memory usage.
- OpenAI vector stores tool added to Tools menu.
- Fixed multi-threading when uploading to remote vector store.
- Fixed Urls open in Snap.

2.5.85 (2025-08-02)

- Added importer for models from providers in Config -> Models -> Import... - #127
- Fix: options save in models editor.

2.5.84 (2025-08-02)

- Added a new OpenAI agent mode: Evolve. You can find its description in the documentation under the section Modes -> Agent (OpenAI).

2.5.83 (2025-08-01)

- Improved streaming in Agent (OpenAI) mode.
- Improved loading of default options in presets.
- Added context summary event if the kernel stopped.
- Implemented dynamic width for opened combo boxes.

2.5.82 (2025-08-01)

- Added a new OpenAI agents: researcher, planner, feedback.

2.5.81 (2025-07-31)

- Disabled remote tools by default in non-OpenAI providers in Agent (OpenAI) mode.
- Removed unsupported models from Agent (OpenAI) mode.

2.5.80 (2025-07-30)

- Improved the stop command in Agent mode: added saving of current output on break.
- Fixed the experts providers list in Agent (LlamaIndex): now only Llama providers are displayed.
- Added max_turns configuration to Agent (OpenAI), shared with Agents -> Max steps configuration option value.

2.5.79 (2025-07-30)

- Added prevent text break on input send when the cursor is inside the text.
- Fix: updating expert IDs on preset save.
- Added notification if no agent is selected.
- Disabled FFmpeg warnings.

2.5.78 (2025-07-30)

- Added support for Python 3.13.
- Fixed history prepare in Agent (LlamaIndex) mode.

2.5.77 (2025-07-30)

- Fix: history prepare in Agent (OpenAI) mode.
- Agent response evaluation splitted into two modes: by the percentage of task completion and by accuracy.

2.5.76 (2025-07-30)

- Added a new mode: Agent (OpenAI) and integrated `openai-agents` into the app (beta).

2.5.75 (2025-07-28)

- Fix: context append in LlamaIndex agents.

2.5.74 (2025-07-28)
